hphp/test/slow/user_attributes/abstract_final_mock.php.expectf

Fatal error: Class MockAbsFinalClass with __MockClass inheriting 'abstract final' class AbsFinalClass must also be 'abstract final' in %s/abstract_final_mock.php on line 6
